--- a/WpfApp1/App.csproj
+++ b/WpfApp1/App.csproj
@@ -135,6 +135,7 @@
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Page Include="Window1.xaml">
       <SubType>Designer</SubType>
